# secubox-openwrt

./: .config  .gitignore  BETA-RELEASE.fr.md  BETA-RELEASE.md  BETA-RELEASE.zh.md  BUILD_ISSUES.md  CHANGELOG.fr.md  CHANGELOG.md  CHANGELOG.zh.md  CLAUDE.md  CODE-TEMPLATES.md  COMPLETION_REPORT.md  DEBUG_GUIDE.md  DEPLOY_UPDATES.md  DEVELOPMENT-GUIDELINES.md  DNS-SECUBOX-IN-SETUP.md  DOCUMENTATION-INDEX.md  ENHANCEMENTS_V2.md  FEATURE-REGENERATION-PROMPTS.md  KISS-FIRST-TIME-WIZARD.md  LUCI_DEVELOPMENT_REFERENCE.md  MODULE-IMPLEMENTATION-GUIDE.md  MODULE_STATUS.md  Makefile  PERMISSIONS-GUIDE.md  PROJECT-STATUS-AND-INNOVATION.md  QUICK-START.md  README.fr.md  README.md  README.zh.md  RPC_TIMEOUT_FIXES.md  SECURITY.fr.md  SECURITY.md  SECURITY.zh.md  TIMEOUT_FIX.md  TODO-ANALYSE.md  VALIDATION-GUIDE.md  WIKI-SETUP-GUIDE.md  build-openwrt-packages.yml  build-secubox-images.yml  (+30 more)
.claude/: DEV-STATUS.md  EVOLUTION-PLAN.md  FAQ-TROUBLESHOOTING.md  HISTORY.md  README.md  ROADMAP.md  THEME_CONTEXT.md  TODO.md  WIP.md  context.md  module-implementation-guide.md  module-prompts.md  settings.local.json
.codex/: HISTORY.md  README.md  SECUBOX_APP_STORE.md  THEME_CONTEXT.md  TODO.md  WIP.md  architecture.md  claudeia-notes.md  context.md  conventions.md  prompting.md  requirements.md  rules.md  workflows.md
.github/: copilot-instructions.md
DOCS/: ARCHITECTURE_NOTES.md  CLAUDE.md  CODE-TEMPLATES.md  CODEX.md  CROWDSEC-OPENWRT-24.md  CVE-LAYER7.md  DDOS-PROTECTION.md  DEVELOPMENT-GUIDELINES.md  DOCUMENTATION-INDEX.md  FEATURE-REGENERATION-PROMPTS.md  GLOBAL_THEME_SYSTEM.md  HELP_INTEGRATION_PLAN.md  INNOVATION-RECOMMENDATIONS.md  LUCI_DEVELOPMENT_REFERENCE.md  (+11 more)
DOCS-fr/: CROWDSEC-OPENWRT-24.md  CVE-LAYER7.md  DDOS-PROTECTION.md  GLOBAL_THEME_SYSTEM.md  HELP_INTEGRATION_PLAN.md  INNOVATION-RECOMMENDATIONS.md  MIGRATION-NETIFYD-TO-NDPID.md  MQTT_BRIDGE.md  THREE-LOOP-ARCHITECTURE.md
DOCS-zh/: CROWDSEC-OPENWRT-24.md  CVE-LAYER7.md  DDOS-PROTECTION.md  GLOBAL_THEME_SYSTEM.md  HELP_INTEGRATION_PLAN.md  INNOVATION-RECOMMENDATIONS.md  MIGRATION-NETIFYD-TO-NDPID.md  MQTT_BRIDGE.md  THREE-LOOP-ARCHITECTURE.md
package/secubox/zkp-hamiltonian/: .gitignore  CMakeLists.txt  Makefile  OPENWRT_PACKAGING.md  PROMPT.md  README.fr.md  README.md  README.zh.md  SECUBOX_INTEGRATION.md  SPEC.md
package/secubox/zkp-hamiltonian/include/: zkp_crypto.h  zkp_graph.h  zkp_hamiltonian.h  zkp_types.h
package/secubox/zkp-hamiltonian/openwrt/: Makefile
package/secubox/zkp-hamiltonian/src/: zkp_crypto.c  zkp_graph.c  zkp_prove.c  zkp_serialize.c  zkp_verify.c
package/secubox/zkp-hamiltonian/tests/: test_crypto.c  test_graph.c  test_nizk.c  test_protocol.c
package/secubox/zkp-hamiltonian/tools/: zkp_keygen.c  zkp_prover.c  zkp_verifier.c
secubox-tools/webui/: README.fr.md  README.md  README.zh.md  pyproject.toml
secubox-tools/webui/app/: __init__.py  config.py  ingest.py  main.py  models.py  services.py  websockets.py
secubox-tools/webui/app/backends/: __init__.py  base.py  config.py  factory.py  http.py  metrics.py  virtualized.py
secubox-tools/webui/data/: appstore.json  commands.json  components.json  devices.json  module_kits.json  modules.json  presets.json  profiles.json  projects.json  reviews.json  settings.json  templates.json  workspace.json
secubox-tools/webui/docs/: API.md  IMPLEMENTATION_SUMMARY.md  ui-kit.md
secubox-tools/webui/scripts/: ingest_packages.py  run-dev.sh
secubox-tools/webui/secubox_webui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
secubox-tools/webui/static/css/: cyberpunk.css  site.css
secubox-tools/webui/static/js/: command-center.js  store.js
secubox-tools/webui/templates/: appstore.html  appstore_detail.html  base.html  components.html  index.html  module_detail.html  profiles.html  settings.html  templates.html  workspace.html
secubox-tools/webui/templates/components/: card_actions.html  card_base.html
secubox-tools/webui/templates/partials/: appstore_grid.html  command_center.html  device_action_result.html  device_edit_modal.html  install_result.html  module_grid.html  profile_action_result.html  run_result.html  settings_result.html  template_preview.html  template_result.html  workspace_composer.html  workspace_devices.html  workspace_kit_result.html  workspace_module_kits.html  workspace_overview.html  workspace_project_result.html
secubox-tools/webui/templates/themes/: luci_dark.html  secubox_light.html
secubox-tools/webui/tests/: test_app.py
(+3387 files in other folders)
