[project]
name = "secubox-webui"
version = "0.1.0"
description = "Local FastAPI-based WebUI mockup for virtualizing SecuBox modules"
authors = [{name = "SecuBox Team"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "pydantic>=2.8",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.scripts]
secubox-webui-ingest = "app.ingest:main"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.uvicorn]
app = "app.main:app"
reload = true
host = "127.0.0.1"
port = 8100
